# magnifier-dioxus

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  README.uk.md  build.rs
.github/workflows/: release.yml
android-res/drawable/: ic_launcher_background.xml
android-res/drawable-v24/: ic_launcher_foreground.xml
android-res/values-uk/: strings.xml
assets/: main.css
docs/superpowers/plans/: 2026-07-23-magnifier.md  2026-07-24-macro-lens.md
docs/superpowers/specs/: 2026-07-23-magnifier-design.md  2026-07-24-macro-lens-design.md
locales/: en.yml  uk.yml
scripts/: android-postprocess.sh  generate-release-keystore.sh  release-apk.sh
src/: i18n.rs  main.rs  settings.rs
src/camera/: macro_lens.rs  mod.rs  stub.rs  zoom.rs
src/camera/android/: cam2.rs  jni_glue.rs  mod.rs  surface.rs
src/ui/: controls.rs
